[gd_scene load_steps=16 format=3 uid="uid://d3iiik7hema8m"]

[ext_resource type="Script" path="res://scripts/interactable_outline.gd" id="1_ijx5a"]
[ext_resource type="Material" uid="uid://4ftusght3jek" path="res://materials/outline_material.tres" id="2_nvb1a"]
[ext_resource type="Script" path="res://scripts/interactable.gd" id="3_ewyvc"]
[ext_resource type="PackedScene" uid="uid://7popm8y0vc8t" path="res://scenes/extractor.tscn" id="4_2stya"]
[ext_resource type="Script" path="res://scripts/health.gd" id="4_5ocj3"]
[ext_resource type="Script" path="res://scripts/long_interactable.gd" id="5_wbd1c"]
[ext_resource type="Script" path="res://scripts/extractor_management.gd" id="6_41o34"]
[ext_resource type="Resource" uid="uid://bhcwmn3yhumwm" path="res://items/scrap_metal.tres" id="7_l7elh"]
[ext_resource type="PackedScene" uid="uid://bljr4gcuhu3p1" path="res://art/3d/Extractor Simple.glb" id="8_1lpn4"]
[ext_resource type="PackedScene" uid="uid://bft24jrnqj2u6" path="res://art/3d/Extractor Pro.glb" id="9_r77kg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1m6m3"]
size = Vector3(2.92438, 3.11768, 4.68996)

[sub_resource type="Animation" id="Animation_nu4mf"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Extractor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, -1.5, 0)

[sub_resource type="Animation" id="Animation_5yv3h"]
resource_name = "build_extractor"
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Extractor")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, -1.5, 0, 1, 1, 0, 0, 0)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Extractor:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xx0q2"]
resource_name = "upgrade_extractor"
length = 0.5
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Extractor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.25, 1, 1.1, 1.1, 1.1, 0.5, 1, 1, 1, 1)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Extractor")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qageu"]
_data = {
"RESET": SubResource("Animation_nu4mf"),
"build_extractor": SubResource("Animation_5yv3h"),
"upgrade_extractor": SubResource("Animation_xx0q2")
}

[node name="ExtractorBuilder" type="Node3D"]

[node name="InteractableOutline" type="Node" parent="." node_paths=PackedStringArray("interactable")]
script = ExtResource("1_ijx5a")
interactable = NodePath("../Interactable")
outline_material = ExtResource("2_nvb1a")

[node name="Interactable" type="StaticBody3D" parent="."]
script = ExtResource("3_ewyvc")
interactable_name = "Sitio de Extractor"
input_names = Array[String](["Construir"])
info_title = "Sitio de Extractor"
info_details = "Permite construir un extractor en esta posición."

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.630585, 1.05884, 0.0125046)
shape = SubResource("BoxShape3D_1m6m3")

[node name="Health" type="Node3D" parent="Interactable"]
script = ExtResource("4_5ocj3")
team = "extractors"
max_health = 200.0

[node name="Extractor" parent="." instance=ExtResource("4_2stya")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)
extraction_interval = 3000.0
extraction_amount = 10
max_scrap_storage = 50
enabled = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qageu")
}

[node name="LongInteractable" type="Node" parent="." node_paths=PackedStringArray("interactable")]
script = ExtResource("5_wbd1c")
interactable = NodePath("../Interactable")
cancel_input_names = Array[String](["Cancelar Construcción"])
interaction_names = Array[String](["Construyendo Extractor..."])
interaction_times = Array[float]([3000.0])
intercept_actions = Array[bool]([true])

[node name="ExtractorManagement" type="Node" parent="." node_paths=PackedStringArray("extractor_interactable", "extractor_long_interactable", "extractor", "animation")]
script = ExtResource("6_41o34")
scrap_resource = ExtResource("7_l7elh")
extractor_interactable = NodePath("../Interactable")
extractor_long_interactable = NodePath("../LongInteractable")
extractor = NodePath("../Extractor")
build_cost = 50
upgrade_costs = Array[int]([50, 100, 150])
extraction_intervals = Array[float]([2500.0, 2000.0, 1500.0])
extraction_amounts = Array[int]([25, 35, 50])
storages = Array[int]([200, 400, 600])
healths = Array[float]([750.0, 1000.0, 1250.0])
animation = NodePath("../AnimationPlayer")
interactable_name = "Extractor"
upgrade_action_name = "Mejorar"
repair_action_name = "Reparar"
collect_action_name = "Recolectar"
upgrade_interactable_name = "Mejorando Extractor..."
repair_interactable_name = "Reparando Extractor..."
upgrade_cancel_name = "Cancelar Mejora"
repair_cancel_name = "Cancelar Reparación"
upgrade_time = 5000.0
repair_time = 2000.0
repair_fraction = 0.1

[node name="Extractor Simple" parent="." instance=ExtResource("8_1lpn4")]

[node name="Extractor Pro" parent="." instance=ExtResource("9_r77kg")]

[connection signal="interact" from="Interactable" to="ExtractorManagement" method="_on_interactable_interact"]
[connection signal="death" from="Interactable/Health" to="ExtractorManagement" method="_on_health_death"]
[connection signal="revive" from="Interactable/Health" to="ExtractorManagement" method="_on_health_revive"]
[connection signal="long_interact" from="LongInteractable" to="." method="_on_long_interactable_long_interact"]
[connection signal="long_interact" from="LongInteractable" to="ExtractorManagement" method="_on_long_interactable_long_interact"]
